ui_tests/tests/should-fail/2_1-bare.rs
fn main() {}

#[mod_template::define(define_foo)]
fn an_fn() {}
